@@ -964,6 +964,10 @@ $custom_data_source_types = array(
 	'SIMILAR_DATA_SOURCES_DUPS'      => __('All Similar Data Sources (Include Duplicates)'),
 	'CURRENT_DS_MINIMUM_VALUE'       => __('Current Data Source Item: Minimum Value'),
 	'CURRENT_DS_MAXIMUM_VALUE'       => __('Current Data Source Item: Maximum Value'),
+	'CURRENT_DS_LSLFUNCTION'         => __('Current Data Source Item: Least Squares Line Function'),
+	'CURRENT_DS_LSLINT'              => __('Current Data Source Item: Least Squares Line Y-intercept'),
+	'CURRENT_DS_LSLSLOPE'            => __('Current Data Source Item: Least Squares Line Slope'),
+	'CURRENT_DS_LSLCORREL'           => __('Current Data Source Item: Least Squares Line Correlation Coefficient'),
 	'CURRENT_GRAPH_MINIMUM_VALUE'    => __('Graph: Lower Limit'),
 	'CURRENT_GRAPH_MAXIMUM_VALUE'    => __('Graph: Upper Limit'),
 	'COUNT_ALL_DS_NODUPS'            => __('Count of All Data Sources (Do not Include Duplicates)'),
